--- a/Ansible/metricbeats_config.yml
+++ b/Ansible/metricbeats_config.yml
@@ -158,3 +158,6 @@ processors:
 #monitoring.elasticsearch:
 
 #================================= Migration ==================================
+
+# This allows to enable 6.7 migration aliases
+#migration.6_to_7.enabled: true
